fix(ios): small fixes and config changes which improve experience on iOS devices

--- a/src/client/scss/index.scss
+++ b/src/client/scss/index.scss
@@ -263,6 +263,8 @@
     color: inherit;
     text-decoration: underline;
     cursor: pointer;
+
+    @include unselectable;
   }
 
   footer a {
@@ -682,7 +684,6 @@
     position: absolute;
     z-index: 51;
     border-radius: 10px;
-    min-width: 520px;
     width: calc(100% - 100px);
     box-sizing: border-box;
     max-width: 800px;
